--- a/games/index.html
+++ b/games/index.html
@@ -8,7 +8,7 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
     <script src="js/firebase-core.js"></script>
-    <script src="js/simple-auth.js"></script>
+    <script src="js/auth-service.js"></script>
     <script src="js/data-service.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="../styles.css">
@@ -214,6 +214,12 @@
                                 <li>Get personalized feedback from your TA</li>
                             </ul>
                             <p class="text-sm text-purple-700 mt-4">Ask your TA for the class passcode to join.</p>
+                            <div class="mt-4 pt-4 border-t border-purple-200">
+                                <h4 class="font-medium text-purple-800 mb-2">For Teaching Assistants</h4>
+                                <a href="ta-login.html" class="inline-block bg-purple-600 text-white px-3 py-1 rounded text-sm hover:bg-purple-700">
+                                    <i class="fas fa-user-shield mr-1"></i> TA Login
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -258,9 +264,9 @@
     <script>
         document.addEventListener('DOMContentLoaded', function() {
             // Check if user is logged in
-            if (SimpleAuth.isLoggedIn()) {
+            if (EconGames.AuthService.isLoggedIn()) {
                 // Show logged in view
-                const session = SimpleAuth.getSession();
+                const session = EconGames.AuthService.getSession();
                 document.getElementById('current-user-name').textContent = session.studentName;
                 document.getElementById('auth-status').classList.remove('hidden');
                 document.getElementById('auth-buttons').classList.add('hidden');
@@ -272,26 +278,26 @@
 
             // Register button
             document.getElementById('register-btn').addEventListener('click', function() {
-                SimpleAuth.showRegistrationModal();
+                EconGames.AuthService.showRegistrationModal();
             });
 
             // Login button
             document.getElementById('login-btn').addEventListener('click', function() {
-                SimpleAuth.showLoginModal();
+                EconGames.AuthService.showLoginModal();
             });
 
             // Logout button
             document.getElementById('logout-btn').addEventListener('click', function() {
-                SimpleAuth.logout();
+                EconGames.AuthService.logout();
             });
 
             // Add click handlers for game links to clear session for single player mode
             document.querySelectorAll('a[href="investment-odyssey/single-player.html"], a[href="fiscal-balance/index.html"]').forEach(function(link) {
                 link.addEventListener('click', function(e) {
                     // Only for non-logged in users
-                    if (!SimpleAuth.isLoggedIn()) {
+                    if (!EconGames.AuthService.isLoggedIn()) {
                         // Clear any existing session
-                        SimpleAuth.clearSession();
+                        EconGames.AuthService.clearSession();
 
                         // Set single player mode
                         localStorage.setItem('singlePlayerMode', 'true');
