--- a/activities/investment-odyssey/index.html
+++ b/activities/investment-odyssey/index.html
@@ -143,6 +143,33 @@
         <div class="row">
             <div class="col-md-4">
                 <div class="card">
+                    <div class="card-header bg-info text-white d-flex justify-content-between align-items-center">
+                        <h3 class="mb-0">Your Portfolio</h3>
+                        <div>
+                            <span class="badge badge-light mr-2">Round: <span id="portfolio-round-display">0</span>/20</span>
+                            <span class="badge badge-light">Value: $<span id="portfolio-value-badge">0.00</span></span>
+                        </div>
+                    </div>
+                    <div class="card-body" style="height: 400px; overflow-y: auto;">
+                        <table class="table table-striped table-sm">
+                            <thead>
+                                <tr>
+                                    <th>Asset</th>
+                                    <th>Quantity</th>
+                                    <th>Value</th>
+                                    <th>%</th>
+                                </tr>
+                            </thead>
+                            <tbody id="portfolio-table-body">
+                                <!-- Portfolio data will be populated here dynamically -->
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-8">
+                <div class="card">
                     <div class="card-header bg-primary text-white d-flex justify-content-between align-items-center">
                         <h3 class="mb-0" style="font-size: 1.5rem;">Game Controls & Trading</h3>
                     </div>
@@ -167,74 +194,64 @@
                             </div>
                         </div>
 
-                        <h5 class="mb-2">Trade Assets</h5>
-                        <form id="trade-form">
-                            <div class="form-group">
-                                <label for="asset-select">Select Asset</label>
-                                <select class="form-control" id="asset-select" required>
-                                    <option value="">-- Select Asset --</option>
-                                    <option value="S&P 500">S&P 500</option>
-                                    <option value="Bonds">Bonds</option>
-                                    <option value="Real Estate">Real Estate</option>
-                                    <option value="Gold">Gold</option>
-                                    <option value="Commodities">Commodities</option>
-                                    <option value="Bitcoin">Bitcoin</option>
-                                </select>
+                        <div class="row">
+                            <div class="col-md-6">
+                                <h5 class="mb-2">Trade Assets</h5>
+                                <form id="trade-form">
+                                    <div class="form-group">
+                                        <label for="asset-select">Select Asset</label>
+                                        <select class="form-control" id="asset-select" required>
+                                            <option value="">-- Select Asset --</option>
+                                            <option value="S&P 500">S&P 500</option>
+                                            <option value="Bonds">Bonds</option>
+                                            <option value="Real Estate">Real Estate</option>
+                                            <option value="Gold">Gold</option>
+                                            <option value="Commodities">Commodities</option>
+                                            <option value="Bitcoin">Bitcoin</option>
+                                        </select>
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="action-select">Action</label>
+                                        <select class="form-control" id="action-select" required>
+                                            <option value="buy">Buy</option>
+                                            <option value="sell">Sell</option>
+                                        </select>
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="quantity-input">Quantity</label>
+                                        <input type="number" class="form-control" id="quantity-input" min="0.01" step="0.01" required>
+                                    </div>
+                                    <div class="form-group">
+                                        <label>Current Price: $<span id="current-price-display">0.00</span></label>
+                                    </div>
+                                    <div class="form-group">
+                                        <label>Total Cost: $<span id="total-cost-display">0.00</span></label>
+                                    </div>
+                                    <button type="submit" class="btn btn-primary btn-block">Execute Trade</button>
+                                </form>
                             </div>
-                            <div class="form-group">
-                                <label for="action-select">Action</label>
-                                <select class="form-control" id="action-select" required>
-                                    <option value="buy">Buy</option>
-                                    <option value="sell">Sell</option>
-                                </select>
+                            <div class="col-md-6">
+                                <h5 class="mb-2">Cash Allocation</h5>
+                                <div class="form-group">
+                                    <label for="cash-percentage">Percentage of Cash to Use: <span id="cash-percentage-display">50</span>%</label>
+                                    <input type="range" class="form-control-range" id="cash-percentage" min="0" max="100" value="50">
+                                </div>
+                                <div class="form-group">
+                                    <label>Amount to Spend: $<span id="cash-amount-display">5000.00</span></label>
+                                </div>
+                                <div class="form-group">
+                                    <label>Remaining Cash: $<span id="remaining-cash-display">5000.00</span></label>
+                                </div>
+                                <div class="form-group mt-4">
+                                    <button id="quick-buy-btn" class="btn btn-success btn-block">Quick Buy Selected Asset</button>
+                                </div>
+                                <hr>
+                                <div class="d-flex justify-content-between">
+                                    <button id="buy-all-btn" class="btn btn-success">Buy All Assets</button>
+                                    <button id="sell-all-btn" class="btn btn-danger">Sell All Assets</button>
+                                </div>
                             </div>
-                            <div class="form-group">
-                                <label for="quantity-input">Quantity</label>
-                                <input type="number" class="form-control" id="quantity-input" min="0.01" step="0.01" required>
-                            </div>
-                            <div class="form-group">
-                                <label>Current Price: $<span id="current-price-display">0.00</span></label>
-                            </div>
-                            <div class="form-group">
-                                <label>Total Cost: $<span id="total-cost-display">0.00</span></label>
-                            </div>
-                            <button type="submit" class="btn btn-primary btn-block">Execute Trade</button>
-                        </form>
-
-                        <hr>
-
-                        <div class="d-flex justify-content-between">
-                            <button id="buy-all-btn" class="btn btn-success">Buy All Assets</button>
-                            <button id="sell-all-btn" class="btn btn-danger">Sell All Assets</button>
                         </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-md-8">
-                <div class="card">
-                    <div class="card-header bg-info text-white d-flex justify-content-between align-items-center">
-                        <h3 class="mb-0">Your Portfolio</h3>
-                        <div>
-                            <span class="badge badge-light mr-2">Round: <span id="portfolio-round-display">0</span>/20</span>
-                            <span class="badge badge-light">Value: $<span id="portfolio-value-badge">0.00</span></span>
-                        </div>
-                    </div>
-                    <div class="card-body">
-                        <table class="table table-striped">
-                            <thead>
-                                <tr>
-                                    <th>Asset</th>
-                                    <th>Quantity</th>
-                                    <th>Current Price</th>
-                                    <th>Value</th>
-                                    <th>% of Portfolio</th>
-                                </tr>
-                            </thead>
-                            <tbody id="portfolio-table-body">
-                                <!-- Portfolio data will be populated here dynamically -->
-                            </tbody>
-                        </table>
                     </div>
                 </div>
             </div>
