--- a/activities/investment-odyssey/index.html
+++ b/activities/investment-odyssey/index.html
@@ -261,7 +261,7 @@
                     <div class="card-body">
                         <div class="row">
                             <div class="col-md-8">
-                                <div style="height: 250px;">
+                                <div style="height: 300px;">
                                     <canvas id="market-pulse-chart"></canvas>
                                 </div>
                             </div>
@@ -289,37 +289,45 @@
                         <h3>Comparative Asset Performance</h3>
                     </div>
                     <div class="card-body">
-                        <div style="height: 350px;">
+                        <div style="height: 400px;">
                             <canvas id="comparative-returns-chart" width="400" height="200"></canvas>
                         </div>
-                        <div class="d-flex flex-wrap justify-content-center mt-3">
-                            <div class="form-check form-check-inline mx-2">
-                                <input class="form-check-input" type="checkbox" id="show-sp500" checked>
-                                <label class="form-check-label" for="show-sp500">S&P 500</label>
-                            </div>
-                            <div class="form-check form-check-inline mx-2">
-                                <input class="form-check-input" type="checkbox" id="show-bonds" checked>
-                                <label class="form-check-label" for="show-bonds">Bonds</label>
-                            </div>
-                            <div class="form-check form-check-inline mx-2">
-                                <input class="form-check-input" type="checkbox" id="show-real-estate" checked>
-                                <label class="form-check-label" for="show-real-estate">Real Estate</label>
-                            </div>
-                            <div class="form-check form-check-inline mx-2">
-                                <input class="form-check-input" type="checkbox" id="show-gold" checked>
-                                <label class="form-check-label" for="show-gold">Gold</label>
-                            </div>
-                            <div class="form-check form-check-inline mx-2">
-                                <input class="form-check-input" type="checkbox" id="show-commodities" checked>
-                                <label class="form-check-label" for="show-commodities">Commodities</label>
-                            </div>
-                            <div class="form-check form-check-inline mx-2">
-                                <input class="form-check-input" type="checkbox" id="show-bitcoin" checked>
-                                <label class="form-check-label" for="show-bitcoin">Bitcoin</label>
-                            </div>
-                            <div class="form-check form-check-inline mx-2">
-                                <input class="form-check-input" type="checkbox" id="show-cpi" checked>
-                                <label class="form-check-label" for="show-cpi">CPI</label>
+                        <div class="mt-3 asset-toggle-container">
+                            <div class="row">
+                                <div class="col-md-4">
+                                    <div class="form-check mb-2">
+                                        <input class="form-check-input" type="checkbox" id="show-sp500" checked>
+                                        <label class="form-check-label" for="show-sp500">S&P 500</label>
+                                    </div>
+                                    <div class="form-check mb-2">
+                                        <input class="form-check-input" type="checkbox" id="show-bonds" checked>
+                                        <label class="form-check-label" for="show-bonds">Bonds</label>
+                                    </div>
+                                </div>
+                                <div class="col-md-4">
+                                    <div class="form-check mb-2">
+                                        <input class="form-check-input" type="checkbox" id="show-real-estate" checked>
+                                        <label class="form-check-label" for="show-real-estate">Real Estate</label>
+                                    </div>
+                                    <div class="form-check mb-2">
+                                        <input class="form-check-input" type="checkbox" id="show-gold" checked>
+                                        <label class="form-check-label" for="show-gold">Gold</label>
+                                    </div>
+                                </div>
+                                <div class="col-md-4">
+                                    <div class="form-check mb-2">
+                                        <input class="form-check-input" type="checkbox" id="show-commodities" checked>
+                                        <label class="form-check-label" for="show-commodities">Commodities</label>
+                                    </div>
+                                    <div class="form-check mb-2">
+                                        <input class="form-check-input" type="checkbox" id="show-bitcoin" checked>
+                                        <label class="form-check-label" for="show-bitcoin">Bitcoin</label>
+                                    </div>
+                                    <div class="form-check mb-2">
+                                        <input class="form-check-input" type="checkbox" id="show-cpi" checked>
+                                        <label class="form-check-label" for="show-cpi">CPI</label>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
