--- a/activities/investment-odyssey/class-game.html
+++ b/activities/investment-odyssey/class-game.html
@@ -373,14 +373,64 @@
                                                 <label style="font-size: 0.85rem;">Current Price: $<span id="current-price-display">0.00</span></label>
                                             </div>
                                             <div class="form-group mb-1">
-                                                <label for="amount-input" style="font-size: 0.85rem; margin-bottom: 0.25rem;">Amount ($)</label>
-                                                <input type="number" class="form-control form-control-sm" id="amount-input" min="1" step="1" required>
+                                                <div class="d-flex justify-content-between">
+                                                    <label for="amount-input" style="font-size: 0.85rem; margin-bottom: 0.25rem;">Amount ($)</label>
+                                                    <div class="custom-control custom-switch">
+                                                        <input type="checkbox" class="custom-control-input" id="input-mode-switch">
+                                                        <label class="custom-control-label" for="input-mode-switch" style="font-size: 0.75rem;">Switch to Quantity</label>
+                                                    </div>
+                                                </div>
                                             </div>
-                                            <div class="form-group mb-1">
-                                                <label style="font-size: 0.85rem;">Quantity: <span id="quantity-display">0.00</span></label>
+
+                                            <!-- Dollar Amount Input (default) -->
+                                            <div id="amount-input-container">
+                                                <div class="form-group mb-1">
+                                                    <div class="input-group input-group-sm">
+                                                        <div class="input-group-prepend">
+                                                            <span class="input-group-text">$</span>
+                                                        </div>
+                                                        <input type="number" class="form-control form-control-sm" id="amount-input" min="1" step="1" required>
+                                                    </div>
+                                                </div>
+                                                <div class="form-group mb-1">
+                                                    <input type="range" class="form-control-range" id="amount-slider" min="0" max="100" value="0" step="1">
+                                                    <div class="d-flex justify-content-between" style="font-size: 0.7rem;">
+                                                        <span>0%</span>
+                                                        <span>25%</span>
+                                                        <span>50%</span>
+                                                        <span>75%</span>
+                                                        <span>100%</span>
+                                                    </div>
+                                                </div>
                                             </div>
+
+                                            <!-- Quantity Input (hidden by default) -->
+                                            <div id="quantity-input-container" style="display: none;">
+                                                <div class="form-group mb-1">
+                                                    <div class="input-group input-group-sm">
+                                                        <input type="number" class="form-control form-control-sm" id="quantity-input" min="0.000001" step="0.000001" required>
+                                                        <div class="input-group-append">
+                                                            <span class="input-group-text" id="quantity-unit">units</span>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class="form-group mb-1">
+                                                    <input type="range" class="form-control-range" id="quantity-slider" min="0" max="100" value="0" step="1">
+                                                    <div class="d-flex justify-content-between" style="font-size: 0.7rem;">
+                                                        <span>0%</span>
+                                                        <span>25%</span>
+                                                        <span>50%</span>
+                                                        <span>75%</span>
+                                                        <span>100%</span>
+                                                    </div>
+                                                </div>
+                                            </div>
+
                                             <div class="form-group mb-2">
-                                                <label style="font-size: 0.85rem;">Total Cost: $<span id="total-cost-display">0.00</span></label>
+                                                <div class="d-flex justify-content-between">
+                                                    <label style="font-size: 0.85rem;">Quantity: <span id="quantity-display">0.00</span></label>
+                                                    <label style="font-size: 0.85rem;">Total: $<span id="total-cost-display">0.00</span></label>
+                                                </div>
                                             </div>
                                             <button type="submit" class="btn btn-primary btn-sm btn-block">Execute Trade</button>
                                         </form>
