--- a/activities/activity3/index-builder.html
+++ b/activities/activity3/index-builder.html
@@ -500,7 +500,9 @@
                         Now that you've created your leading indicator index, you can use it to make a forecast about the probability of a recession in the next 12-24 months.
                     </p>
 
-                    <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
+                    <!-- Change to a stacked layout with performance graph on top -->
+                    <div class="flex flex-col gap-8">
+                        <!-- Index Performance Section (Now on top) -->
                         <div>
                             <h3 class="text-lg font-medium text-gray-900 mb-4">Your Index Performance</h3>
 
@@ -537,6 +539,7 @@
                             </div>
                         </div>
 
+                        <!-- Your Forecast Section (Now below) -->
                         <div>
                             <h3 class="text-lg font-medium text-gray-900 mb-4">Your Forecast</h3>
 
@@ -556,62 +559,92 @@
                                 </div>
                             </div>
 
-                            <!-- GDP Growth Forecast (12 months) -->
+                            <!-- GDP Growth Forecast (12 months) - Fixed alignment -->
                             <div class="bg-gray-50 p-4 rounded-lg mb-4">
                                 <h4 class="font-medium text-gray-900 mb-2">GDP Growth Forecast (next 12 months)</h4>
-                                <p class="text-sm text-gray-600 mb-4">
+                                <p class="text-sm text-gray-600 mb-3">
                                     Based on your analysis of the index, what do you expect for GDP growth in the next 12 months?
                                 </p>
-                                <div class="space-y-2">
-                                    <div class="flex items-center">
-                                        <input type="radio" id="gdp12_strong" name="gdp12" value="Strong Growth (>3%)" class="mr-2">
-                                        <label for="gdp12_strong" class="text-sm">Strong Growth (>3%)</label>
+                                <div class="grid grid-cols-2 gap-4">
+                                    <div class="flex items-start">
+                                        <input type="radio" id="gdp12_strong" name="gdp12" value="Strong Growth (>3%)" class="mt-1 mr-2">
+                                        <label for="gdp12_strong" class="text-sm">
+                                            <div>Strong</div>
+                                            <div>Growth</div>
+                                            <div>(>3%)</div>
+                                        </label>
                                     </div>
-                                    <div class="flex items-center">
-                                        <input type="radio" id="gdp12_moderate" name="gdp12" value="Moderate Growth (1-3%)" class="mr-2" checked>
-                                        <label for="gdp12_moderate" class="text-sm">Moderate Growth (1-3%)</label>
+                                    <div class="flex items-start">
+                                        <input type="radio" id="gdp12_moderate" name="gdp12" value="Moderate Growth (1-3%)" class="mt-1 mr-2" checked>
+                                        <label for="gdp12_moderate" class="text-sm">
+                                            <div>Moderate</div>
+                                            <div>Growth</div>
+                                            <div>(1-3%)</div>
+                                        </label>
                                     </div>
-                                    <div class="flex items-center">
-                                        <input type="radio" id="gdp12_slow" name="gdp12" value="Slow Growth (0-1%)" class="mr-2">
-                                        <label for="gdp12_slow" class="text-sm">Slow Growth (0-1%)</label>
+                                    <div class="flex items-start">
+                                        <input type="radio" id="gdp12_slow" name="gdp12" value="Slow Growth (0-1%)" class="mt-1 mr-2">
+                                        <label for="gdp12_slow" class="text-sm">
+                                            <div>Slow</div>
+                                            <div>Growth</div>
+                                            <div>(0-1%)</div>
+                                        </label>
                                     </div>
-                                    <div class="flex items-center">
-                                        <input type="radio" id="gdp12_negative" name="gdp12" value="Negative Growth" class="mr-2">
-                                        <label for="gdp12_negative" class="text-sm">Negative Growth</label>
+                                    <div class="flex items-start">
+                                        <input type="radio" id="gdp12_negative" name="gdp12" value="Negative Growth" class="mt-1 mr-2">
+                                        <label for="gdp12_negative" class="text-sm">
+                                            <div>Negative</div>
+                                            <div>Growth</div>
+                                        </label>
                                     </div>
                                 </div>
                             </div>
 
-                            <!-- GDP Growth Forecast (24 months) -->
+                            <!-- GDP Growth Forecast (24 months) - Fixed alignment -->
                             <div class="bg-gray-50 p-4 rounded-lg mb-4">
                                 <h4 class="font-medium text-gray-900 mb-2">GDP Growth Forecast (next 24 months)</h4>
-                                <p class="text-sm text-gray-600 mb-4">
+                                <p class="text-sm text-gray-600 mb-3">
                                     Based on your analysis of the index, what do you expect for GDP growth in the next 24 months?
                                 </p>
-                                <div class="space-y-2">
-                                    <div class="flex items-center">
-                                        <input type="radio" id="gdp24_strong" name="gdp24" value="Strong Growth (>3%)" class="mr-2">
-                                        <label for="gdp24_strong" class="text-sm">Strong Growth (>3%)</label>
+                                <div class="grid grid-cols-2 gap-4">
+                                    <div class="flex items-start">
+                                        <input type="radio" id="gdp24_strong" name="gdp24" value="Strong Growth (>3%)" class="mt-1 mr-2">
+                                        <label for="gdp24_strong" class="text-sm">
+                                            <div>Strong</div>
+                                            <div>Growth</div>
+                                            <div>(>3%)</div>
+                                        </label>
                                     </div>
-                                    <div class="flex items-center">
-                                        <input type="radio" id="gdp24_moderate" name="gdp24" value="Moderate Growth (1-3%)" class="mr-2" checked>
-                                        <label for="gdp24_moderate" class="text-sm">Moderate Growth (1-3%)</label>
+                                    <div class="flex items-start">
+                                        <input type="radio" id="gdp24_moderate" name="gdp24" value="Moderate Growth (1-3%)" class="mt-1 mr-2" checked>
+                                        <label for="gdp24_moderate" class="text-sm">
+                                            <div>Moderate</div>
+                                            <div>Growth</div>
+                                            <div>(1-3%)</div>
+                                        </label>
                                     </div>
-                                    <div class="flex items-center">
-                                        <input type="radio" id="gdp24_slow" name="gdp24" value="Slow Growth (0-1%)" class="mr-2">
-                                        <label for="gdp24_slow" class="text-sm">Slow Growth (0-1%)</label>
+                                    <div class="flex items-start">
+                                        <input type="radio" id="gdp24_slow" name="gdp24" value="Slow Growth (0-1%)" class="mt-1 mr-2">
+                                        <label for="gdp24_slow" class="text-sm">
+                                            <div>Slow</div>
+                                            <div>Growth</div>
+                                            <div>(0-1%)</div>
+                                        </label>
                                     </div>
-                                    <div class="flex items-center">
-                                        <input type="radio" id="gdp24_negative" name="gdp24" value="Negative Growth" class="mr-2">
-                                        <label for="gdp24_negative" class="text-sm">Negative Growth</label>
+                                    <div class="flex items-start">
+                                        <input type="radio" id="gdp24_negative" name="gdp24" value="Negative Growth" class="mt-1 mr-2">
+                                        <label for="gdp24_negative" class="text-sm">
+                                            <div>Negative</div>
+                                            <div>Growth</div>
+                                        </label>
                                     </div>
                                 </div>
                             </div>
 
                             <!-- Recession Probability -->
-                            <div class="bg-gray-50 p-4 rounded-lg">
+                            <div class="bg-gray-50 p-4 rounded-lg mb-4">
                                 <h4 class="font-medium text-gray-900 mb-2">Recession Probability (next 12-24 months)</h4>
-                                <p class="text-sm text-gray-600 mb-4">
+                                <p class="text-sm text-gray-600 mb-3">
                                     Based on your analysis of the index, what do you think is the probability of a recession in the next 12-24 months?
                                 </p>
                                 <div class="flex items-center space-x-4">
@@ -621,21 +654,24 @@
                                 </div>
                             </div>
 
-                            <!-- Save Results -->
-                            <div class="mt-8">
-                                <button onclick="saveResults()" class="w-full inline-flex justify-center items-center px-6 py-3 border border-transparent text-base font-medium rounded-md text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">
-                                    Download Results
-                                </button>
-                                <p class="mt-2 text-sm text-gray-500 text-center">
-                                    Save your results as a CSV file to submit to your TA
-                                </p>
-                            </div>
+                            <!-- Action Buttons -->
+                            <div class="grid grid-cols-2 gap-4 mt-6">
+                                <!-- Save Results -->
+                                <div>
+                                    <button onclick="saveResults()" class="w-full inline-flex justify-center items-center px-4 py-2 border border-transparent text-base font-medium rounded-md text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">
+                                        Download Results
+                                    </button>
+                                    <p class="mt-1 text-xs text-gray-500 text-center">
+                                        Save as CSV for your TA
+                                    </p>
+                                </div>
 
-                            <!-- Next Button -->
-                            <div class="mt-8 text-center">
-                                <button onclick="showStep('ai-prompt')" class="inline-flex items-center px-6 py-3 border border-transparent text-base font-medium rounded-md text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">
-                                    Continue to AI Prompt →
-                                </button>
+                                <!-- Next Button -->
+                                <div>
+                                    <button onclick="showStep('ai-prompt')" class="w-full inline-flex justify-center items-center px-4 py-2 border border-transparent text-base font-medium rounded-md text-white bg-green-600 hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-green-500">
+                                        Continue to AI Prompt →
+                                    </button>
+                                </div>
                             </div>
                         </div>
                     </div>
